[gd_scene load_steps=3 format=3 uid="uid://caiw0dqd1jmxl"]

[ext_resource type="Script" uid="uid://dw1mqprtrst63" path="res://godot/wizard.gd" id="1_ah1ee"]
[ext_resource type="Texture2D" uid="uid://b52mai06fi3xc" path="res://godot/Wizard.png" id="1_v31vg"]

[node name="Wizard" type="Node2D"]
script = ExtResource("1_ah1ee")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_v31vg")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpellTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_spell_timer_timeout"]
